# lo

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  KEYS  LICENSE  README.md  SECURITY.md  rust-toolchain.toml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
assets/icons/: icon.icns
assets/macos/: Info.plist
crates/lo/: Cargo.toml
crates/lo-core/: Cargo.toml
crates/lo-core/assets/shaders/: orb.wgsl
crates/lo-core/src/: lib.rs  shaders.rs  text.rs  types.rs
crates/lo-core/src/backends/: download.rs  mod.rs  models.rs
crates/lo-core/src/brain/: mod.rs  sse.rs  types.rs
crates/lo-core/src/config/: history.rs  mod.rs  options.rs  paths.rs  persona.rs
crates/lo-core/src/tools/: audit.rs  mod.rs  sandbox.rs  shell.rs  ssrf.rs
crates/lo/assets/linux/: lo.desktop
crates/lo/assets/macos/: Info.plist
crates/lo/src/: events.rs  listen.rs  main.rs  worker.rs
crates/lo/src/app/: mod.rs  state.rs
crates/lo/src/audio/: capture.rs  mod.rs  playback.rs  resample.rs  spectrum.rs
crates/lo/src/backends/: download.rs  managed_server.rs  mod.rs
crates/lo/src/brain/: mod.rs
crates/lo/src/gui/: captions.rs  mod.rs  orb.rs
crates/lo/src/ml/: asr.rs  download.rs  mod.rs  tts.rs  vad.rs  wakeword.rs
crates/lo/src/tools/: clipboard.rs  desktop.rs  files.rs  media.rs  mod.rs  shell.rs  system.rs  timer.rs  web.rs
docs/: index.html  main.js  orb.js  styles.css
