# Lo — a fast, local, pure-native Rust voice agent.
#
# Workspace. `lo-core` holds the pure, dependency-light logic (config, the brain
# agent loop + SSE parsing, backend selection + download-URL resolution + the RAM
# ladder, the tool registry + safety gate + SSRF guard + filesystem sandbox, TTS
# chunking) so it builds fast and is exhaustively unit-tested without dragging in
# the GPU / audio / ML native toolchain. The `lo` binary crate layers
# winit + wgpu + cpal + whisper-rs + ort on top.
[workspace]
resolver = "2"
members = ["crates/lo-core", "crates/lo"]

[workspace.package]
version = "1.0.0"
edition = "2021"
# rubato (1.85) and sysinfo (0.39) set the floor; pin the whole workspace here.
rust-version = "1.85"
# Proprietary, source-available (read-only) — see the LICENSE file. Not an SPDX
# `license` id; both crates are `publish = false`, so crates.io never sees this.
license-file = "LICENSE"
authors = ["Rani367 <rani2011367@gmail.com>"]
repository = "https://github.com/Rani367/lo"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
thiserror = "2"

# Lints shared by every crate (each opts in with `[lints] workspace = true`). CI
# already runs `cargo clippy -- -D warnings`; this makes the same bar apply to
# local builds and pins the no-unsafe invariant. `deny` (not `forbid`) so the one
# legitimate exception — bytemuck's `Pod`/`Zeroable` derive on the orb uniform
# struct — can carry a documented `#[allow(unsafe_code)]`.
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
