[package]
name = "lo-core"
description = "Pure-logic core for Lo: config, brain agent loop, backends, tools, safety."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
