[package]
name = "lo-core"
description = "Pure-logic core for Lo: config, brain agent loop, backends, tools, safety."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/Rani367/lo"
documentation = "https://github.com/Rani367/lo"
keywords = ["voice", "assistant", "local", "agent", "tools"]
categories = ["command-line-utilities", "accessibility"]
# Internal crate of the Lo app — not published separately to crates.io.
publish = false

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
# Validates the orb WGSL without needing a GPU. Pinned to the same naga the bin's
# wgpu (25 — egui-wgpu 0.32's cohort) compiles, so validation matches the real GPU
# compiler and the workspace keeps a single naga version.
naga = { version = "25", features = ["wgsl-in"] }
