[package]
name = "lo"
description = "Lo — a fast, local, pure-native Rust voice agent."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "lo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
bytemuck = "1.25.0"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
cpal = "0.18.1"
directories.workspace = true
dotenvy = "0.15.7"
egui = "0.32.3"
egui-wgpu = "0.32.3"
egui-winit = "0.32.3"
