[package]
name = "lo"
description = "Lo — a fast, local, pure-native Rust voice agent."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "lo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
bytemuck = "1.25.0"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
cpal = "0.18.1"
directories.workspace = true
dotenvy = "0.15.7"
egui = "0.32.3"
egui-wgpu = "0.32.3"
egui-winit = "0.32.3"
futures-util = "0.3.32"
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq", "rustls-tls"], optional = true }
hickory-resolver = "0.25.2"
html2text = "0.17.1"
image = "0.25.9"
kokoro-tts = { version = "0.3.3", optional = true }
lo-core = { path = "../lo-core" }
notify-rust = "4.17.0"
open = "5.3.5"
ort = { version = "2.0.0-rc.10", optional = true }
pollster = "0.4.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2"] }
rtrb = "0.3.4"
rubato = "3.0.0"
rustfft = "6.4.1"
scraper = "0.27.0"
serde.workspace = true
serde_json.workspace = true
starship-battery = "0.10.2"
sysinfo = "0.36.1"
thiserror.workspace = true
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "time", "fs", "sync", "io-util", "signal", "net"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
wgpu = "25"
whisper-rs = { version = "0.16.0", optional = true }
winit = "0.30.13"
xcap = "0.9.6"
zip = "7.2.0"

[features]
default = ["ml"]
# Heavy on-device ML. Each engine is independently toggleable so a host missing a
# C/C++/CMake toolchain (or building offline) can still produce a working binary
# (ASR/TTS/VAD degrade to clean stubs when their feature is off).
ml = ["asr-whisper", "tts-kokoro", "vad-silero"]
asr-whisper = ["dep:whisper-rs", "dep:hf-hub"]
tts-kokoro = ["dep:kokoro-tts", "dep:hf-hub"]
vad-silero = ["dep:ort", "dep:hf-hub"]

# Packaging via cargo-packager (Phase 8). Produces .app/.dmg (macOS), .msi/.nsis
# (Windows), .deb/.rpm/.appimage (Linux). Build with `cargo packager --release`
# after `cargo install cargo-packager`. Verify the exact key spellings against the
# installed cargo-packager version before a release.
[package.metadata.packager]
product-name = "Lo"
identifier = "com.lo.assistant"
category = "Utility"
description = "A fast, local, pure-native Rust voice agent."
icons = ["assets/icons/icon.png", "assets/icons/icon.icns", "assets/icons/icon.ico"]

[package.metadata.packager.macos]
# Critical: merges NSMicrophoneUsageDescription so macOS lets cpal open the mic.
info-plist-path = "assets/macos/Info.plist"
minimum-system-version = "11.0"
